wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wordpress
    namespace: wordpress
spec:
    replicas: 1
    selector:
        matchLabels:
            name: wordpress
    template:
        metadata:
            labels:
                name: wordpress
        spec:
            containers:
            - name: wordpress
              image: wordpress
              imagePullPolicy: IfNotPresent
              volumeMounts:
                - name: wordpress-volume
                  mountPath: /var/www/html
            volumes:
              - name: wordpress-volume
                persistentVolumeClaim:
                  claimName: wordpress-pvc
