service-mysql-master.yaml
apiVersion: v1
kind: Service
metadata:
    name: wordpress-to-mysql
    namespace: wordpress
spec:
    ports:
    - port: 3306
    selector:
        mysql: master
