service-mysql-slave.yaml
apiVersion: v1
kind: Service
metadata:
    name: wordpress-to-slave
    namespace: wordpress
spec:
    ports:
    - port: 3306
    selector:
        mysql: slave
