service-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
    name: test-wordpress
    namespace: wordpress
spec:
    ports:
    - port: 80
    selector:
        name: wordpress
