ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: ingress-wordpress
  namespace: wordpress
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.kk.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-wordpress
            port:
              number: 80
